# TapoProtocol

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Cli/: CMakeLists.txt
Cli/Inc/: Cli.hpp
Device/: CMakeLists.txt
Device/Inc/: Device.hpp
Device/Src/: Device.cpp
Discover/: CMakeLists.txt
Discover/Inc/: Discover.hpp  DiscoverProtocol.hpp
Discover/Src/: Discover.cpp  DiscoverProtocol.cpp
